Prion: DDP-4913, merge Prion into Pepper: fixed various TSLint errors

--- a/ddp-workspace/projects/ddp-prion/src/index.html
+++ b/ddp-workspace/projects/ddp-prion/src/index.html
@@ -26,7 +26,7 @@
   <script src="https://kit.fontawesome.com/6ff953c590.js" crossorigin="anonymous"></script>
   <script type="text/javascript">
     function loadTcell() {
-      var tcellScript = document.createElement('script');
+      const tcellScript = document.createElement('script');
       tcellScript.setAttribute('src', 'https://us.jsagent.tcell.insight.rapid7.com/tcellagent.min.js');
       tcellScript.setAttribute('tcellbaseurl', DDP_ENV.tcellbaseurl);
       tcellScript.setAttribute('tcellappid', DDP_ENV.tcellappid);
