add seo optimizations

--- a/ddp-workspace/projects/ddp-testboston/src/index.html
+++ b/ddp-workspace/projects/ddp-testboston/src/index.html
@@ -7,6 +7,11 @@
   <title>TestBoston</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="description"
+    content="TestBoston—a COVID-19 at-home testing study from Brigham and Women's Hospital and the Broad Institute. Watching the infection rate of COVID-19 in Massachusetts over time." />
+  <meta property="og:type" content="website" />
+  <meta property="og:description"
+    content="TestBoston—a COVID-19 at-home testing study from Brigham and Women's Hospital and the Broad Institute. Watching the infection rate of COVID-19 in Massachusetts over time." />
   <link id="app-favicon" rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
