--- a/ddp-workspace/projects/ddp-rarex/src/index.html
+++ b/ddp-workspace/projects/ddp-rarex/src/index.html
@@ -11,7 +11,7 @@
     <base href="/">
 
     <link id="app-favicon" rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="assets/config/pepperConfig.js"></script>
