--- a/ddp-workspace/projects/ddp-rgp/src/index.html
+++ b/ddp-workspace/projects/ddp-rgp/src/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script type="text/javascript">
     function loadTcell() {
-      var tcellScript = document.createElement('script');
+      const tcellScript = document.createElement('script');
       tcellScript.setAttribute('src', 'https://us.jsagent.tcell.insight.rapid7.com/tcellagent.min.js');
       tcellScript.setAttribute('tcellbaseurl', DDP_ENV.tcellbaseurl);
       tcellScript.setAttribute('tcellappid', DDP_ENV.tcellappid);
