DDP-5470 Use the style preloading in other applications

--- a/ddp-workspace/projects/ddp-atcp/src/index.html
+++ b/ddp-workspace/projects/ddp-atcp/src/index.html
@@ -9,11 +9,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link id="app-favicon" rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href='https://fonts.googleapis.com/css?family=Lato:400,700,700italic,400italic,300,300italic' rel='stylesheet'
-  type='text/css'>
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,600|Source+Serif+Pro:600&amp;display=swap" rel="stylesheet">
-  <link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=McLaren">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,700,700italic,400italic,300,300italic'
+        rel="preload" as="style">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,600|Source+Serif+Pro:600&amp;display=swap"
+        rel="preload" as="style">
+  <link media="screen" href="https://fonts.googleapis.com/css?family=McLaren" rel="preload" as="style">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="preload" as="style">
   <script src="assets/config/pepperConfig.js"></script>
   <script>
     window.ga = window.ga || function () {
