--- a/ddp-workspace/projects/ddp-brain/src/index.html
+++ b/ddp-workspace/projects/ddp-brain/src/index.html
@@ -8,8 +8,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link id="app-favicon" rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:600&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:600&display=swap" rel="preload" as="style">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="preload" as="style">
   <script type="text/javascript">
     function loadTcell() {
       var tcellScript = document.createElement('script');
