--- a/ddp-workspace/projects/ddp-mpc/src/index.html
+++ b/ddp-workspace/projects/ddp-mpc/src/index.html
@@ -8,9 +8,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link id="app-favicon" rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,700,700italic" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,700,700italic"
+        rel="preload" as="style">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="preload" as="style">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="preload" as="style">
   <script type="text/javascript">
     function loadTcell() {
       var tcellScript = document.createElement('script');
