DDP-5470 Use the style preloading in other applications

--- a/ddp-workspace/projects/ddp-rgp/src/index.html
+++ b/ddp-workspace/projects/ddp-rgp/src/index.html
@@ -8,11 +8,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link id="app-favicon" rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,500,500i,700" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="preload" as="style">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,500,500i,700" rel="preload" as="style">
+  <link href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" rel="preload" as="style"
     integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="preload" as="style">
   <script type="text/javascript">
     function loadTcell() {
       const tcellScript = document.createElement('script');
