--- a/ddp-workspace/projects/ddp-crc/src/index.html
+++ b/ddp-workspace/projects/ddp-crc/src/index.html
@@ -14,6 +14,11 @@
     <title>Circadia</title>
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <script src="assets/config/pepperConfig.js"></script>
 
