CRC: Add home page

--- a/ddp-workspace/projects/ddp-crc/src/index.html
+++ b/ddp-workspace/projects/ddp-crc/src/index.html
@@ -19,6 +19,10 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
 
     <script src="assets/config/pepperConfig.js"></script>
 
