--- a/ddp-workspace/projects/ddp-circadia/src/index.html
+++ b/ddp-workspace/projects/ddp-circadia/src/index.html
@@ -13,7 +13,7 @@
 
     <title>Circadia</title>
 
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" id="app-favicon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap"
