--- a/ddp-workspace/projects/ddp-cgc/src/index.html
+++ b/ddp-workspace/projects/ddp-cgc/src/index.html
@@ -6,7 +6,7 @@
 
     <base href="/" />
 
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/images/CGC-favicon.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500;600&display=swap"
