DDP-5371: Add header

--- a/ddp-workspace/projects/ddp-brugada/src/index.html
+++ b/ddp-workspace/projects/ddp-brugada/src/index.html
@@ -14,8 +14,10 @@
     />
 
     <link id="app-favicon" rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,600|Source+Serif+Pro:600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link
