DDP-6008: Add gtag

--- a/ddp-workspace/projects/ddp-brugada/src/index.html
+++ b/ddp-workspace/projects/ddp-brugada/src/index.html
@@ -25,6 +25,19 @@
       rel="stylesheet"
     />
 
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-95RZ7RFCYH"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-95RZ7RFCYH');
+    </script>
     <script src="assets/config/pepperConfig.js"></script>
   </head>
 
