--- a/ddp-workspace/projects/ddp-pancan/src/index.html
+++ b/ddp-workspace/projects/ddp-pancan/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Pan-Cancer project</title>
+    <title>Count Me In</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link id="app-favicon" rel="icon" type="image/x-icon" href="favicon.ico">
