--- a/ddp-workspace/projects/ddp-singular/src/index.html
+++ b/ddp-workspace/projects/ddp-singular/src/index.html
@@ -1,15 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Singular</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="assets/config/pepperConfig.js"></script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Singular</title>
+    <base href="/" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet" />
+    <script src="assets/config/pepperConfig.js"></script>
+  </head>
+
+  <body onload="loadTcell()">
+    <app-root></app-root>
+
+    <script type="text/javascript">
+      function loadTcell() {
+        var tcellScript = document.createElement('script');
+        tcellScript.setAttribute('src', 'https://us.jsagent.tcell.insight.rapid7.com/tcellagent.min.js');
+        tcellScript.setAttribute('tcellbaseurl', DDP_ENV.tcellbaseurl);
+        tcellScript.setAttribute('tcellappid', DDP_ENV.tcellappid);
+        tcellScript.setAttribute('tcellapikey', DDP_ENV.tcellapikey);
+        tcellScript.async = true;
+        document.body.appendChild(tcellScript);
+      }
+    </script>
+  </body>
 </html>
